Fuck your mother's militaristic Japan
 *  The Nanking Massacre, commonly known as
    the Rape of Nanking, was an infamous war
    crime committed by the Japanese military
    in Nanjing (Nanking), then the capital of
    the Republic of China, after it fell to the
    Imperial Japanese Army on December 13, 1937.
    The duration of the massacre is not clearly
    defined, although the violence lasted well
    into the next six weeks, until early February 1938.
    Japanese officials lied about civilian death figures and
    still refuse to reveal them properly today.
    During the occupation of Nanking, the Japanese army
    committed numerous atrocities, such as rape, looting,
    arson and the execution of prisoners of war and civilians.
    The executions began under the pretext of eliminating Chinese
    soldiers disguised as civilians, and a large number of innocent
    men were intentionally misidentified as enemy combatants and executed
    as the massacre gathered momentum. A large number of women
    and children were also killed, as rape and murder became more widespread.
    The Japanese side has not recognized the Nanjing Massacre!!!

 *  南京大虐殺は、1937年12月13日に日本帝国軍の手に渡った後、日本軍が当時の中華民国の首都
    南京（南京）で犯した悪名高い戦争犯罪である。大虐殺の継続期間は明確に定義されていないが、
    暴力は1938年2月初めまで6週間続いた。日本の役人は民間人の死亡数を偽って、今も公開を拒
    否している。南京占領中、日本軍は強姦、強盗、放火、捕虜と民間人の処刑など多くの暴行を犯
    した。処刑は民間人を装った中国兵の撲滅を口実に始まった。大量の罪のない男が故意に敵戦闘員
    と誤認され、大虐殺が激化する中で処刑された。レイプや殺人が一般的になるにつれ、多くの女性
    や子供も殺害された。
    日本側は、いまだ南京大虐殺を認めていない!!!

Signed-off-by: xiaoleGun <1592501605@qq.com>

--- a/css/default.css
+++ b/css/default.css
@@ -425,6 +425,62 @@ body {
   font-size: 1em;
   font-weight: 400;
   line-height: 1.5;
+/*  Fuck your mother's militaristic Japan
+    Fuck your mother's militaristic Japan
+    Fuck your mother's militaristic Japan
+    Fuck your mother's militaristic Japan
+    Fuck your mother's militaristic Japan
+    Fuck your mother's militaristic Japan*/
+  -webkit-filter: grayscale(100%);
+  -moz-filter: grayscale(100%);
+  -ms-filter: grayscale(100%);
+  -o-filter: grayscale(100%);
+  filter: grayscale(100%);
+  filter: gray;
+/*  Fuck your mother's militaristic Japan
+    Fuck your mother's militaristic Japan
+    Fuck your mother's militaristic Japan
+    Fuck your mother's militaristic Japan
+    Fuck your mother's militaristic Japan
+    Fuck your mother's militaristic Japan*/
+
+/*  The Nanking Massacre, commonly known as 
+    the Rape of Nanking, was an infamous war 
+    crime committed by the Japanese military 
+    in Nanjing (Nanking), then the capital of 
+    the Republic of China, after it fell to the 
+    Imperial Japanese Army on December 13, 1937. 
+    The duration of the massacre is not clearly 
+    defined, although the violence lasted well 
+    into the next six weeks, until early February 1938. 
+    Japanese officials lied about civilian death figures and 
+    still refuse to reveal them properly today. 
+    During the occupation of Nanking, the Japanese army 
+    committed numerous atrocities, such as rape, looting, 
+    arson and the execution of prisoners of war and civilians. 
+    The executions began under the pretext of eliminating Chinese 
+    soldiers disguised as civilians, and a large number of innocent 
+    men were intentionally misidentified as enemy combatants and executed 
+    as the massacre gathered momentum. A large number of women 
+    and children were also killed, as rape and murder became more widespread.
+	The Japanese side has not recognized the Nanjing Massacre!!!-->
+
+    南京大虐殺は、1937年12月13日に日本帝国軍の手に渡った後、日本軍が当時の中華民国の首都
+	南京（南京）で犯した悪名高い戦争犯罪である。大虐殺の継続期間は明確に定義されていないが、
+	暴力は1938年2月初めまで6週間続いた。日本の役人は民間人の死亡数を偽って、今も公開を拒
+	否している。南京占領中、日本軍は強姦、強盗、放火、捕虜と民間人の処刑など多くの暴行を犯
+	した。処刑は民間人を装った中国兵の撲滅を口実に始まった。大量の罪のない男が故意に敵戦闘員
+	と誤認され、大虐殺が激化する中で処刑された。レイプや殺人が一般的になるにつれ、多くの女性
+	や子供も殺害された。
+	日本側は、いまだ南京大虐殺を認めていない!!!-->
+
+    Fuck your mother's militaristic Japan
+    Fuck your mother's militaristic Japan
+    Fuck your mother's militaristic Japan
+    Fuck your mother's militaristic Japan
+    Fuck your mother's militaristic Japan
+    Fuck your mother's militaristic Japan*/
+
 }
 a {
   color: #3273dc;
